; ModuleID = '/home/carl/AnghaBench/8cc/extr_parse.c_read_bitsize.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_parse.c_read_bitsize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i64, i32 }

@.str = private unnamed_addr constant [42 x i8] c"non-integer type cannot be a bitfield: %s\00", align 1
@KIND_BOOL = common dso_local global i64 0, align 8
@.str.1 = private unnamed_addr constant [33 x i8] c"invalid bitfield size for %s: %d\00", align 1
@.str.2 = private unnamed_addr constant [44 x i8] c"zero-width bitfield needs to be unnamed: %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, %struct.TYPE_5__*)* @read_bitsize to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_bitsize(i8* %0, %struct.TYPE_5__* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_5__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %4, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %9 = call i32 @is_inttype(%struct.TYPE_5__* %8)
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %15, label %11

11:                                               ; preds = %2
  %12 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %13 = call i32 @ty2s(%struct.TYPE_5__* %12)
  %14 = call i32 @error(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %11, %2
  %16 = call i32* (...) @peek()
  store i32* %16, i32** %5, align 8
  %17 = call i32 (...) @read_intexpr()
  store i32 %17, i32* %6, align 4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %19 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = load i64, i64* @KIND_BOOL, align 8
  %22 = icmp eq i64 %20, %21
  br i1 %22, label %23, label %24

23:                                               ; preds = %15
  br label %29

24:                                               ; preds = %15
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %26 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %25, i32 0, i32 1
  %27 = load i32, i32* %26, align 8
  %28 = mul nsw i32 %27, 8
  br label %29

29:                                               ; preds = %24, %23
  %30 = phi i32 [ 1, %23 ], [ %28, %24 ]
  store i32 %30, i32* %7, align 4
  %31 = load i32, i32* %6, align 4
  %32 = icmp slt i32 %31, 0
  br i1 %32, label %37, label %33

33:                                               ; preds = %29
  %34 = load i32, i32* %7, align 4
  %35 = load i32, i32* %6, align 4
  %36 = icmp slt i32 %34, %35
  br i1 %36, label %37, label %45

37:                                               ; preds = %33, %29
  %38 = load i32*, i32** %5, align 8
  %39 = load %struct.TYPE_5__*, %struct.TYPE_5__** %4, align 8
  %40 = call i32 @ty2s(%struct.TYPE_5__* %39)
  %41 = sext i32 %40 to i64
  %42 = inttoptr i64 %41 to i8*
  %43 = load i32, i32* %6, align 4
  %44 = call i32 (i32*, i8*, i8*, ...) @errort(i32* %38, i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i8* %42, i32 %43)
  br label %45

45:                                               ; preds = %37, %33
  %46 = load i32, i32* %6, align 4
  %47 = icmp eq i32 %46, 0
  br i1 %47, label %48, label %55

48:                                               ; preds = %45
  %49 = load i8*, i8** %3, align 8
  %50 = icmp ne i8* %49, null
  br i1 %50, label %51, label %55

51:                                               ; preds = %48
  %52 = load i32*, i32** %5, align 8
  %53 = load i8*, i8** %3, align 8
  %54 = call i32 (i32*, i8*, i8*, ...) @errort(i32* %52, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.2, i64 0, i64 0), i8* %53)
  br label %55

55:                                               ; preds = %51, %48, %45
  %56 = load i32, i32* %6, align 4
  ret i32 %56
}

declare dso_local i32 @is_inttype(%struct.TYPE_5__*) #1

declare dso_local i32 @error(i8*, i32) #1

declare dso_local i32 @ty2s(%struct.TYPE_5__*) #1

declare dso_local i32* @peek(...) #1

declare dso_local i32 @read_intexpr(...) #1

declare dso_local i32 @errort(i32*, i8*, i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
